# maidenx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: Cargo.toml  README.md
benches/benches/maidenx_tensor/: main.rs
benches/benches/maidenx_tensor/ops/: binary.rs  mod.rs  reduction.rs  unary.rs
benches/src/: lib.rs
book/: README.md  book.toml
crates/maidenx_core/: Cargo.toml
crates/maidenx_core/src/: device.rs  dtype.rs  error.rs  layout.rs  lib.rs  scalar.rs
crates/maidenx_core/src/be/: mod.rs
crates/maidenx_core/src/be/nn/: activation.rs  conv.rs
crates/maidenx_core/src/be/ops/: binary.rs  matmul.rs  padding.rs  reduction.rs  unary.rs
crates/maidenx_core/src/buffer/: cpu.rs  cuda.rs  mod.rs  mps.rs
crates/maidenx_core/src/buffer/nn/: conv.rs  mod.rs
crates/maidenx_core/src/buffer/ops/: binary.rs  matmul.rs  mod.rs  reduction.rs  unary.rs
crates/maidenx_cpu/: Cargo.toml
crates/maidenx_cpu/src/: lib.rs  utils.rs
crates/maidenx_cpu/src/nn/: conv.rs  mod.rs
crates/maidenx_cpu/src/ops/: binary.rs  matmul.rs  padding.rs  reduction.rs  unary.rs
crates/maidenx_cuda/: CMakeLists.txt  Cargo.toml  build.rs
crates/maidenx_cuda/kernels/: compatibility.cuh  cuda_utils.cuh
crates/maidenx_cuda/kernels/nn/: conv.cu
crates/maidenx_cuda/kernels/ops/: binary.cu  matmul.cu  padding.cu  reduction.cu  unary.cu
crates/maidenx_cuda/src/: lib.rs
crates/maidenx_cuda/src/nn/: conv.rs
crates/maidenx_cuda/src/ops/: binary.rs  matmul.rs  mod.rs  padding.rs  reduction.rs  unary.rs
crates/maidenx_internal/: Cargo.toml
crates/maidenx_internal/src/: lib.rs  prelude.rs
crates/maidenx_macro_utils/: Cargo.toml
crates/maidenx_macro_utils/src/: manifest.rs
crates/maidenx_mps/: Cargo.toml  Makefile  build.rs
crates/maidenx_mps/kernels/: README.md  atomics.metal  metal_utils.metal
crates/maidenx_mps/kernels/nn/: conv.metal
crates/maidenx_mps/kernels/ops/: binary.metal  matmul.metal  padding.metal  reduction.metal  unary.metal
crates/maidenx_mps/src/: lib.rs  metal_context.rs
crates/maidenx_mps/src/nn/: conv.rs
crates/maidenx_mps/src/ops/: binary.rs  matmul.rs  mod.rs  padding.rs  reduction.rs  unary.rs
crates/maidenx_nn/: Cargo.toml
crates/maidenx_nn/macros/: Cargo.toml
crates/maidenx_nn/macros/src/: lib.rs
crates/maidenx_nn/src/: functional.rs  layer.rs  lib.rs  optimizer.rs
crates/maidenx_nn/src/functional/: mod.rs
crates/maidenx_nn/src/layers/: activation.rs  conv.rs  dropout.rs  embedding.rs  linear.rs  mod.rs  normalization.rs
crates/maidenx_nn/src/losses/: crossentropy.rs  huber.rs  mae.rs  mod.rs  mse.rs
crates/maidenx_nn/src/optimizers/: adam.rs  sgd.rs
crates/maidenx_tensor/: Cargo.toml
crates/maidenx_tensor/src/: adapter.rs  creation.rs  d.rs  f.rs  iterator.rs  lib.rs  operators.rs  serde.rs  vec.rs  wt.rs
crates/maidenx_tensor/src/aliases/: activation.rs
crates/maidenx_tensor/src/nn_aliases/: activation.rs
crates/maidenx_tensor/src/ops/: binary.rs  broadcasting.rs  indexing.rs  matmul.rs  mod.rs  padding.rs  reduction.rs  transform.rs  unary.rs
crates/maidenx_tensor/src/utils/: broadcast.rs  indexing.rs  logical.rs  mod.rs  promotion.rs
crates/maidenx_tensor/tests/: creation.rs  ops_binary.rs  ops_broadcasting.rs  ops_indexing.rs  ops_matmul.rs  ops_padding.rs  ops_reduction.rs  ops_transform.rs  ops_unary.rs  tensor.rs  wt.rs
crates/maidenx_tensor/tests/ops/: binary.rs  indexing.rs  matmul.rs  mod.rs  padding.rs  reduction.rs  transform.rs  unary.rs
crates/maidenx_tensor/tests/utils/: mod.rs
crates/maidenx_tensor_v2/: Cargo.toml  README.md
crates/maidenx_tensor_v2/src/: adapter.rs  cast.rs  constants.rs  creation.rs  display.rs  iterator.rs  lib.rs  memory.rs  ops.rs  prelude.rs  utils.rs  vec.rs  wt.rs
crates/maidenx_tensor_v2/src/ops/: _try_binary.rs  _try_matmul.rs  _try_padding.rs  _try_reduction.rs  _try_transform.rs  _try_unary.rs  binary.rs  matmul.rs  padding.rs  reduction.rs  transform.rs  unary.rs
crates/maidenx_tensor_v2/src/utils/: broadcast.rs  graph.rs  promotion.rs  tensor.rs
crates/maidenx_tensor_v2/tests/: adapter.rs  cast.rs  creation.rs  memory.rs  vec.rs
crates/maidenx_tensor_v2/tests/utils/: mod.rs
crates/maindex_cuda/: Cargo.toml  build.rs
crates/maindex_cuda/cuda/: CMakeLists.txt
crates/maindex_cuda/cuda/headers/: nn_linear_layers.cuh  nn_non_linear_activations.cuh  tensor_basic_ops.cuh  tensor_reduce_ops.cuh  tensor_scalar_ops.cuh  tensor_shape_ops.cuh
crates/maindex_cuda/cuda/kernels/: nn_linear_layers.cu  nn_non_linear_activations.cu  tensor_basic_ops.cu  tensor_reduce_ops.cu  tensor_scalar_ops.cu  tensor_shape_ops.cu
crates/maindex_cuda/src/: buffer.rs  error.rs  lib.rs
crates/maindex_cuda/src/nn_activations/: non_linear.rs
crates/maindex_cuda/src/nn_layers/: linear.rs
crates/maindex_cuda/src/ops/: tensor_basic.rs  tensor_scalar.rs  tensor_shape.rs
crates/maindex_cuda/src/tensor_ops/: mod.rs  reduce.rs  shape.rs  tensor_reduce.rs  tensor_scalar.rs
crates/maindex_device/: Cargo.toml
crates/maindex_device/src/: error.rs  lib.rs
crates/maindex_internal/: Cargo.toml
crates/maindex_internal/src/: error.rs  lib.rs  prelude.rs
crates/maindex_macro_utils/: Cargo.toml
crates/maindex_macro_utils/src/: lib.rs  manifest.rs
crates/maindex_nn/: Cargo.toml
crates/maindex_nn/macros/: Cargo.toml
crates/maindex_nn/macros/src/: lib.rs
crates/maindex_nn/src/: error.rs  lib.rs  module.rs  optimizer.rs
crates/maindex_nn/src/linear_layers/: bilinear.rs  linear.rs  mod.rs
crates/maindex_nn/src/losses/: mod.rs  mse.rs
crates/maindex_nn/src/non_linear_activations/: mod.rs  relu.rs  sigmoid.rs  tanh.rs
crates/maindex_nn/src/optimizers/: sgd.rs
crates/maindex_tensor/: Cargo.toml
crates/maindex_tensor/src/: adapter.rs  creation.rs  error.rs  gradient.rs  lib.rs  tape.rs
crates/maindex_tensor/src/ops/: _shape.rs  basic.rs  basic_.rs  mod.rs  reduce.rs  scalar.rs  scalar_.rs  shape.rs
crates/maindex_tensor/src/utils/: display.rs  mod.rs  operator.rs  validate.rs
crates/maindex_tensor/tests/: mod.rs
crates/maindex_tensor/tests/ops/: mod.rs
(+97 files in other folders)
