[workspace]
members = ["crates/*"]

[package]
name = "maidenx"
version = "0.1.0-dev"
description = "Rust ML Framework for Maiden Engine"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"
documentation = "https://docs.rs/maidenx"
readme = "README.md"
keywords = ["gpu", "maiden"]
categories = ["science", "development-tools"]

[features]
default = ["nn"]
cuda = ["maidenx_internal/cuda"]
nn = ["maidenx_internal/nn"]

[dependencies]
maidenx_internal = { path = "crates/maindex_internal", version = "0.1.0-dev" }

[[example]]
name = "device-cpu"
path = "examples/device/cpu.rs"
features = ["nn"]

[[example]]
name = "device-cuda"
path = "examples/device/cuda.rs"
features = ["nn", "cuda"]

[[example]]
name = "device-guard"
path = "examples/device/guard.rs"

[[example]]
name = "nn-bilinear"
path = "examples/nn/bilinear.rs"
features = ["nn"]

[[example]]
name = "nn-linear"
path = "examples/nn/linear.rs"
features = ["nn"]

[[example]]
name = "ops-basic_mat_mul"
path = "examples/ops/basic_mat_mul.rs"


[[example]]
name = "optimizer-sgd"
path = "examples/optimizer/sgd.rs"
features = ["nn"]
