[workspace]
members = ["crates/*", "benches"]

[package]
name = "maidenx"
version = "0.2.0-dev"
description = "Rust ML Framework for Maiden Engine"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"
documentation = "https://docs.rs/maidenx"
readme = "README.md"
keywords = ["tensor", "machine-learning", "maidenx"]
categories = ["science"]

[workspace.dependencies]
half = "2.4.1"
paste = "1.0"
rayon = "1.10"

[features]
default = []
cuda = ["maidenx_internal/cuda"]

[dependencies]
maidenx_internal = { path = "crates/maidenx_internal", version = "0.2.0-dev" }

[[example]]
name = "simple-cpu"
path = "examples/simple-cpu.rs"

[[example]]
name = "simple-cuda"
path = "examples/simple-cuda.rs"
