[workspace]
members = ["crates/*", "benches"]

[package]
name = "maidenx"
version = "0.1.0-dev"
description = "Rust ML Framework for Maiden Engine"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"
documentation = "https://docs.rs/maidenx"
readme = "README.md"
keywords = ["tensor", "machine-learning", "maidenx"]
categories = ["science"]

[workspace.dependencies]
half = "2.4.1"
paste = "1.0"
rayon = "1.10"
serde = "1.0.219"
serde_json = "1.0.140"
bincode = "2.0.1"
dashmap = "6.1.0"

[features]
default = ["nn", "serde", "graph"]

nn = ["maidenx_internal/nn"]
serde = ["maidenx_internal/serde"]
graph = ["maidenx_internal/graph"]

cuda = ["maidenx_internal/cuda"]
mps = ["maidenx_internal/mps"]

[dependencies]
maidenx_internal = { path = "crates/maidenx_internal", version = "0.1.0-dev" }

[[example]]
name = "cpu"
path = "examples/device/cpu.rs"

[[example]]
name = "cuda"
path = "examples/device/cuda.rs"

[[example]]
name = "mps"
path = "examples/device/mps.rs"

[[example]]
name = "serde"
path = "examples/serde/serde.rs"
