[package]
name = "maidenx_core"
version = "0.1.0-dev"
description = "maidenx core"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
default = []

nn = ["maidenx_cpu/nn", "maidenx_cuda?/nn"]
serde = ["dep:serde"]

cuda = ["dep:maidenx_cuda"]
mps = ["dep:maidenx_mps"]

[dependencies]
maidenx_cpu = { path = "../maidenx_cpu", version = "0.1.0-dev" }
maidenx_cuda = { path = "../maidenx_cuda", version = "0.1.0-dev", optional = true }
maidenx_mps = { path = "../maidenx_mps", version = "0.1.0-dev", optional = true }
half = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
