[package]
name = "maidenx_internal"
version = "0.2.0-dev"
description = "maidenx internal"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
cuda = ["maidenx_core/cuda", "maidenx_tensor/cuda"]

[dependencies]
maidenx_core = { path = "../maidenx_core", version = "0.2.0-dev" }
maidenx_nn = { path = "../maidenx_nn", version = "0.2.0-dev" }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.2.0-dev" }
