[package]
name = "maidenx_internal"
version = "0.1.0-dev"
description = "maidenx internal"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
nn = ["maidenx_core/nn", "maidenx_tensor/nn", "dep:maidenx_nn"]

cuda = ["maidenx_core/cuda", "maidenx_tensor/cuda"]
mps = ["maidenx_core/mps", "maidenx_tensor/mps"]

[dependencies]
maidenx_core = { path = "../maidenx_core", version = "0.1.0-dev" }
maidenx_nn = { path = "../maidenx_nn", version = "0.1.0-dev", optional = true }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.1.0-dev" }
