[package]
name = "maidenx_mps"
version = "0.1.0-dev"
description = "maidenx MPS backend"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]

[dependencies]
half = { workspace = true }
paste = { workspace = true }
metal = { version = "0.30.0", features = ["mps"] }
