[package]
name = "maidenx_nn"
version = "0.1.0-dev"
description = "maidenx nn"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
default = []
cuda = ["maidenx_core/cuda", "maidenx_tensor/cuda"]

[dependencies]
maidenx_nn_macros = { path = "macros", version = "0.1.0-dev" }

maidenx_core = { path = "../maidenx_core", version = "0.1.0-dev" }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.1.0-dev" }
