[package]
name = "maidenx_nn"
version = "0.1.0-dev"
description = "maidenx nn"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
default = []

serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:bincode",
    "maidenx_nn_macros/serde",
    "maidenx_core/serde",
]

cuda = ["maidenx_core/cuda", "maidenx_tensor/cuda"]
mps = ["maidenx_core/mps", "maidenx_tensor/mps"]

[dependencies]
maidenx_nn_macros = { path = "macros", version = "0.1.0-dev" }

maidenx_core = { path = "../maidenx_core", version = "0.1.0-dev", features = [
    "nn",
] }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.1.0-dev" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true, features = ["serde"] }
