[package]
name = "maidenx_tensor"
version = "0.1.0-dev"
description = "maidenx tensor"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
nn = ["maidenx_core/nn"]
serde = ["maidenx_core/serde", "dep:serde", "dep:serde_json", "dep:bincode"]

cuda = ["maidenx_core/cuda"]
mps = ["maidenx_core/mps"]

[dependencies]
maidenx_core = { path = "../maidenx_core", version = "0.1.0-dev" }
half = { workspace = true }
paste = { workspace = true }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true, features = ["serde"] }
