[package]
name = "maidenx_cuda"
version = "0.1.0-dev"
description = "MaidenX CUDA Backend"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
